syntax = "proto3";
package dogma.api.messaging.v1;

import "api/internal/pb/identity.proto";
import "api/internal/pb/packet.proto";

option go_package = "github.com/dogmatiq/infix/api/internal/pb";

// MessageSource describes the source of a message.
message MessageSource {
  Identity app = 4;
  Identity handler = 5;
  string instance_id = 6;
}

// MessageMetaData contains meta-data about a message.
message MessageMetaData {
  string message_id = 1;
  string causation_id = 2;
  string correlation_id = 3;
  MessageSource source = 4;
  string created_at = 5;
  string scheduled_for = 6;
}

// MessageEnvelope is a container for a message and its meta-data.
message MessageEnvelope {
  MessageMetaData meta_data = 1;
  Packet packet = 2;
}
